# random-scripts

./: .mise.toml  CLAUDE.md  README.md  flake.nix
20241126_fee_payments_with_evmOS/: 01_fee_payer.sh
202411_update_evmOS_repo_from_evmos/: README.md  apply_diff.py  diff_utils.py  git_utils.py  main.py  test_apply_diff.py
20250407_check_repo_structure/: check_repo_structure.py
20250424_check_duplicate_txs_sagaevm/: README.md  pyproject.toml  runDuplicateTx.py
20260519_solana_extension_inspector/: .gitignore  PRD.html  README.md  audit-mextzNVP-dawn7ZUF.json  package.json  pnpm-lock.yaml  summarize.sh
20260519_solana_extension_inspector/src/: classify-list.ts  cli.ts  rpc.ts  types.ts
20260601_m_suite_deployment_admin_check/: README.md  index.js  package.json  pnpm-lock.yaml
20260602_solana_check_wrap_authorities/: check-wrap-authorities.mjs  package.json  pnpm-lock.yaml
20260610_solana_m_associated_mint/: README.md  package.json  pnpm-lock.yaml
20260610_solana_m_associated_mint/src/: index.ts  option1.ts  option2_minimal_idl.ts  option3_direct_borshDecoding.ts
20260611_solana_m0_inspector/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
20260611_solana_m0_inspector/idls/: crank.json  earn.json  no_yield.json  scaled_ui.json
20260611_solana_m0_inspector/src/: checks.ts  config.ts  decode.ts  evm.ts  index.ts  no_yield.ts  report.ts  resolve.ts  token.ts  types.ts
20260630_account_spending_tracker/: README.md  package.json  pnpm-lock.yaml
20260630_account_spending_tracker/src/: etherscan.ts  index.ts  tracker.ts
(+9 files in other folders)
